--- a/src/main/java/view/Cliente/CadastroCliente.fxml
+++ b/src/main/java/view/Cliente/CadastroCliente.fxml
@@ -15,25 +15,23 @@
          <children>
             <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="14.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@figma/2rp.png" />
+                  <Image url="@../figma/2rp.png" />
                </image>
             </ImageView>
             <Button layoutX="26.0" layoutY="538.0" mnemonicParsing="false" scaleX="0.5" scaleY="0.5" text="Button" />
             <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="34.0" layoutY="541.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@figma/log.png" />
+                  <Image url="@../figma/log.png" />
                </image>
             </ImageView>
          </children></Pane>
-      <Label layoutX="423.0" layoutY="14.0" prefHeight="39.0" prefWidth="272.0" text="Cadastro de Cliente" textFill="#483fee">
+      <Label layoutX="408.0" layoutY="14.0" prefHeight="39.0" prefWidth="272.0" text="Cadastro de Cliente" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <Label layoutX="268.0" layoutY="81.0" prefHeight="17.0" prefWidth="86.0" text="Razão Social" />
-      <TextField fx:id="tfRazaoSocial" layoutX="252.0" layoutY="114.0" prefHeight="25.0" prefWidth="120.0" />
-      <Button layoutX="502.0" layoutY="339.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" text="INSERIR" />
-      <TextField fx:id="tfCNPJ" layoutX="639.0" layoutY="114.0" prefHeight="25.0" prefWidth="120.0" />
-      <Label layoutX="673.0" layoutY="81.0" prefHeight="17.0" prefWidth="52.0" text="CNPJ" />
+      <TextField fx:id="tfRazaoSocial" layoutX="191.0" layoutY="104.0" prefHeight="40.0" prefWidth="682.0" promptText="Razão Social" styleClass="input-text" />
+      <Button layoutX="440.0" layoutY="524.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" styleClass="myButton" text="INSERIR" />
+      <TextField fx:id="tfCNPJ" layoutX="191.0" layoutY="187.0" prefHeight="40.0" prefWidth="682.0" promptText="CNPJ" styleClass="input-text" />
    </children>
 </AnchorPane>
