--- a/src/main/java/view/Cr/CadastroCR.fxml
+++ b/src/main/java/view/Cr/CadastroCR.fxml
@@ -15,27 +15,24 @@
          <children>
             <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="14.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@figma/2rp.png" />
+                  <Image url="@../figma/2rp.png" />
                </image>
             </ImageView>
             <Button layoutX="29.0" layoutY="545.0" mnemonicParsing="false" scaleX="0.5" scaleY="0.5" text="Button" />
             <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="37.0" layoutY="540.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@figma/log.png" />
+                  <Image url="@../figma/log.png" />
                </image>
             </ImageView>
          </children></Pane>
-      <Label layoutX="411.0" layoutY="27.0" prefHeight="39.0" prefWidth="217.0" text="Cadastro de CR" textFill="#483fee">
+      <Label layoutX="495.0" layoutY="26.0" prefHeight="39.0" prefWidth="217.0" text="Cadastro de CR" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <Label layoutX="188.0" layoutY="91.0" prefHeight="17.0" prefWidth="52.0" text="Nome" />
-      <Label layoutX="778.0" layoutY="91.0" prefHeight="17.0" prefWidth="37.0" text="Sigla" />
-      <TextField fx:id="tfNome" layoutX="154.0" layoutY="129.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="tfSigla" layoutX="738.0" layoutY="129.0" prefHeight="25.0" prefWidth="127.0" />
-      <Button layoutX="463.0" layoutY="327.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="33.0" prefWidth="82.0" text="INSERIR" />
-      <TextField fx:id="tfCodigo" layoutX="446.0" layoutY="129.0" prefHeight="25.0" prefWidth="120.0" />
-      <Label layoutX="480.0" layoutY="91.0" prefHeight="17.0" prefWidth="52.0" text="Código" />
+      <TextField fx:id="tfNome" layoutX="167.0" layoutY="207.0" prefHeight="33.0" prefWidth="726.0" promptText="Nome" styleClass="input-text" />
+      <TextField fx:id="tfSigla" layoutX="603.0" layoutY="125.0" prefHeight="33.0" prefWidth="290.0" promptText="Sigla" styleClass="input-text" />
+      <Button layoutX="482.0" layoutY="531.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="33.0" prefWidth="82.0" styleClass="myButton" text="INSERIR" />
+      <TextField fx:id="tfCodigo" layoutX="167.0" layoutY="125.0" prefHeight="33.0" prefWidth="408.0" promptText="Codigo" styleClass="input-text" />
    </children>
 </AnchorPane>
