--- a/src/main/java/view/LancamentoHora/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora/LancamentoHora.fxml
@@ -62,7 +62,7 @@
           <content>
             <AnchorPane id="Content" minHeight="578.0" minWidth="810.0" prefHeight="606.0" prefWidth="870.0" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" centerShape="false" editable="true" layoutX="17.0" layoutY="152.0" prefHeight="388.0" prefWidth="835.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="18.0">
+                        <TableView fx:id="table_lancamento" centerShape="false" editable="true" layoutX="18.0" layoutY="115.0" prefHeight="401.0" prefWidth="835.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="17.0">
                           <columns>
                               <TableColumn fx:id="col_cr" prefWidth="93.6000394821167" styleClass="rp-column" text="CR" />
                             <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
@@ -79,13 +79,13 @@
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <Label layoutX="41.0" layoutY="29.0" styleClass="title" text="Lançamento de Horas Extras" textFill="#1f25c1">
+                        <Label layoutX="293.0" layoutY="29.0" styleClass="title" text="Lançamento de Horas Extras" textFill="#1f25c1">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Label>
-                        <Button fx:id="btn_adicionarLinha" layoutX="17.0" layoutY="548.0" mnemonicParsing="false" onAction="#criarNovaLinha" text="+" />
-                        <Button fx:id="btn_lancar" layoutX="69.0" layoutY="548.0" mnemonicParsing="false" onAction="#lancarHoras" text="Lançar" />
+                        <Button fx:id="btn_adicionarLinha" layoutX="14.0" layoutY="538.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="62.0" mnemonicParsing="false" onAction="#criarNovaLinha" prefHeight="40.0" prefWidth="62.0" styleClass="btn-no-restriction" text="+" />
+                        <Button fx:id="btn_lancar" layoutX="85.0" layoutY="538.0" mnemonicParsing="false" onAction="#lancarHoras" prefHeight="40.0" prefWidth="155.0" styleClass="btn-no-restriction" text="Lançar" />
               </children>
             </AnchorPane>
           </content>
