--- a/src/main/java/view/Usuario/CadastroUsuario.fxml
+++ b/src/main/java/view/Usuario/CadastroUsuario.fxml
@@ -44,34 +44,26 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="657.0" prefWidth="928.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuarioController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="657.0" prefWidth="928.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Usuario.CadastroUsuarioController">
   <children>
-<AnchorPane id="Content" minHeight="566.0" prefHeight="626.0" prefWidth="924.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
+<AnchorPane id="Content" minHeight="566.0" prefHeight="658.0" prefWidth="928.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
   <children>
-            <Button fx:id="btn_cadastrar" layoutX="530.0" layoutY="540.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btn_cadastrar" layoutX="530.0" layoutY="540.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="45.0" prefWidth="208.0" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
-            <TextField layoutX="391.0" layoutY="253.0" prefHeight="45.0" prefWidth="485.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="391.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="674.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="398.0" layoutY="148.0" opacity="0.85" prefHeight="45.0" prefWidth="485.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField fx:id="txt_Email" layoutX="391.0" layoutY="253.0" prefHeight="45.0" prefWidth="485.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField fx:id="txt_Cpf" layoutX="391.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField fx:id="txt_Tel" layoutX="674.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField fx:id="txt_Nome" layoutX="398.0" layoutY="148.0" opacity="0.85" prefHeight="45.0" prefWidth="485.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
            
             <BorderPane prefHeight="656.0" prefWidth="356.0">
                <left>
                   <AnchorPane prefHeight="609.0" prefWidth="356.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
                      <children>
-                        <Button layoutX="144.0" layoutY="462.0" minWidth="53.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="53.0" style="-fx-background-color: #1f25c1;" styleClass="myButton" stylesheets="@stylesCadastroUsuario.css" text="" textAlignment="CENTER">
-                           <graphic>
-                              <ImageView fitHeight="58.0" fitWidth="68.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@assets/botao.png" />
-                                 </image>
-                              </ImageView >
-                           </graphic>
-                        </Button>
+                        <Button layoutX="145.0" layoutY="539.0" minWidth="53.0" mnemonicParsing="false" onMouseClicked="#voltar" prefHeight="45.0" prefWidth="53.0" style="-fx-background-color: #1f25c1;" styleClass="btn-no-restriction" stylesheets="@../styles.css" text="" textAlignment="CENTER" />
                         <Text fill="WHITE" layoutX="33.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
                            <font>
                               <Font size="30.0" />
@@ -81,7 +73,12 @@
                         <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="79.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="79.0" layoutY="40.0">
                            <image>
-                              <Image url="@assets/logo.png" />
+                              <Image url="@../assets/Logo.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="58.0" fitWidth="68.0" layoutX="145.0" layoutY="532.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/botao.png" />
                            </image>
                         </ImageView>
                      </children>
@@ -93,7 +90,7 @@
                   <Font size="24.0" />
                </font>
             </Text>
-            <ComboBox id="comb" layoutX="391.0" layoutY="439.0" prefHeight="45.0" prefWidth="192.0" promptText="Tipo" style="-fx-background-color: f5f0f0; -fx-background-radius: 18px;" />
+            <ComboBox id="comb" fx:id="combo_Tipo" layoutX="391.0" layoutY="439.0" prefHeight="45.0" prefWidth="192.0" promptText="Tipo" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;" />
   </children>
 </AnchorPane>
   </children>
