--- a/src/main/java/view/CrUsuario/GerenciamentoCRProjeto.fxml
+++ b/src/main/java/view/CrUsuario/GerenciamentoCRProjeto.fxml
@@ -16,27 +16,25 @@
          <children>
             <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="15.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@figma/2rp.png" />
+                  <Image url="@../figma/2rp.png" />
                </image>
             </ImageView>
             <Button layoutX="35.0" layoutY="534.0" minWidth="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="45.0" scaleX="0.5" scaleY="0.5" text="Button" />
             <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="43.0" layoutY="526.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@figma/log.png" />
+                  <Image url="@../figma/log.png" />
                </image>
             </ImageView>
          </children></Pane>
-      <Label layoutX="410.0" layoutY="25.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR" textFill="#483fee">
+      <Label layoutX="429.0" layoutY="26.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <Button layoutX="485.0" layoutY="345.0" mnemonicParsing="false" onAction="#gerenciarCRProjeto" prefHeight="28.0" prefWidth="70.0" text="INSERIR" />
-      <ComboBox fx:id="comboSquads" layoutX="162.0" layoutY="166.0" prefWidth="150.0" />
-      <ComboBox fx:id="comboNomeUsuario" layoutX="465.0" layoutY="166.0" prefWidth="150.0" />
-      <Label layoutX="224.0" layoutY="137.0" text="Squads" />
-      <Label layoutX="494.0" layoutY="137.0" text="Nome do usuario" />
-      <Label layoutX="779.0" layoutY="137.0" text="Temporário" />
-      <CheckBox fx:id="temporario" layoutX="789.0" layoutY="170.0" mnemonicParsing="false" text="Sim" />
+      <Button layoutX="459.0" layoutY="515.0" mnemonicParsing="false" onAction="#gerenciarCRProjeto" prefHeight="28.0" prefWidth="70.0" styleClass="myButton" text="INSERIR" />
+      <ComboBox fx:id="comboSquads" layoutX="163.0" layoutY="137.0" prefHeight="28.0" prefWidth="238.0" promptText="Squad" styleClass="input-text" />
+      <ComboBox fx:id="comboNomeUsuario" layoutX="459.0" layoutY="137.0" prefHeight="28.0" prefWidth="289.0" promptText="Nome do usuario" styleClass="input-text" />
+      <Label layoutX="810.0" layoutY="112.0" text="Temporário" />
+      <CheckBox fx:id="temporario" layoutX="821.0" layoutY="143.0" mnemonicParsing="false" text="Sim" />
    </children>
 </AnchorPane>
