--- a/src/main/java/view/Usuario/CadastroUsuario.fxml
+++ b/src/main/java/view/Usuario/CadastroUsuario.fxml
@@ -56,7 +56,7 @@
             <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
             <TextField fx:id="txt_Email" layoutX="391.0" layoutY="253.0" prefHeight="45.0" prefWidth="485.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
             <TextField fx:id="txt_Cpf" layoutX="391.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField fx:id="txt_Tel" layoutX="674.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField fx:id="txt_Tel" layoutX="674.0" layoutY="355.0" prefHeight="45.0" prefWidth="199.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
             <TextField fx:id="txt_Nome" layoutX="398.0" layoutY="148.0" opacity="0.85" prefHeight="45.0" prefWidth="485.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
            
             <BorderPane prefHeight="656.0" prefWidth="356.0">
@@ -76,7 +76,7 @@
                               <Image url="@../assets/Logo.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="58.0" fitWidth="68.0" layoutX="145.0" layoutY="532.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="58.0" fitWidth="68.0" layoutX="145.0" layoutY="533.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../assets/botao.png" />
                            </image>
