iniciando padronização das telas

--- a/src/main/java/view/Cliente/CadastroCliente.fxml
+++ b/src/main/java/view/Cliente/CadastroCliente.fxml
@@ -25,13 +25,16 @@
                </image>
             </ImageView>
          </children></Pane>
-      <Label layoutX="408.0" layoutY="14.0" prefHeight="39.0" prefWidth="272.0" text="Cadastro de Cliente" textFill="#483fee">
+      <Label layoutX="408.0" layoutY="21.0" prefHeight="39.0" prefWidth="272.0" text="Cadastro de Cliente" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <TextField fx:id="tfRazaoSocial" layoutX="191.0" layoutY="104.0" prefHeight="40.0" prefWidth="682.0" promptText="Razão Social" styleClass="input-text" />
-      <Button layoutX="440.0" layoutY="524.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" styleClass="myButton" text="INSERIR" />
-      <TextField fx:id="tfCNPJ" layoutX="191.0" layoutY="187.0" prefHeight="40.0" prefWidth="682.0" promptText="CNPJ" styleClass="input-text" />
+      <TextField fx:id="tfRazaoSocial" layoutX="259.0" layoutY="100.0" prefHeight="55.0" prefWidth="507.0" promptText="Razão Social" styleClass="input-text" />
+      <Button layoutX="486.0" layoutY="499.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" styleClass="myButton" text="Inserir">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <TextField fx:id="tfCNPJ" layoutX="259.0" layoutY="220.0" prefHeight="55.0" prefWidth="507.0" promptText="CNPJ" styleClass="input-text" />
    </children>
 </AnchorPane>
