--- a/src/main/java/view/CrUsuario/GerenciamentoCRProjeto.fxml
+++ b/src/main/java/view/CrUsuario/GerenciamentoCRProjeto.fxml
@@ -19,6 +19,7 @@
                   <Image url="@../figma/2rp.png" />
                </image>
             </ImageView>
+           
             <Button layoutX="35.0" layoutY="534.0" minWidth="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="45.0" scaleX="0.5" scaleY="0.5" text="Button" />
             <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="43.0" layoutY="526.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -26,14 +27,17 @@
                </image>
             </ImageView>
          </children></Pane>
-      <Label layoutX="429.0" layoutY="26.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR" textFill="#483fee">
+      <Label layoutX="379.0" layoutY="29.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <Button layoutX="459.0" layoutY="515.0" mnemonicParsing="false" onAction="#gerenciarCRProjeto" prefHeight="28.0" prefWidth="70.0" styleClass="myButton" text="INSERIR" />
-      <ComboBox fx:id="comboSquads" layoutX="163.0" layoutY="137.0" prefHeight="28.0" prefWidth="238.0" promptText="Squad" styleClass="input-text" />
-      <ComboBox fx:id="comboNomeUsuario" layoutX="459.0" layoutY="137.0" prefHeight="28.0" prefWidth="289.0" promptText="Nome do usuario" styleClass="input-text" />
+      <Button layoutX="459.0" layoutY="515.0" mnemonicParsing="false" onAction="#gerenciarCRProjeto" prefHeight="28.0" prefWidth="70.0" styleClass="myButton" text="Inserir">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <ComboBox fx:id="comboSquads" layoutX="250.0" layoutY="143.0" prefHeight="55.0" prefWidth="507.0" promptText="Squad" styleClass="input-text" />
+      <ComboBox fx:id="comboNomeUsuario" layoutX="250.0" layoutY="288.0" prefHeight="55.0" prefWidth="507.0" promptText="Nome do usuario" styleClass="input-text" />
       <Label layoutX="810.0" layoutY="112.0" text="Temporário" />
       <CheckBox fx:id="temporario" layoutX="821.0" layoutY="143.0" mnemonicParsing="false" text="Sim" />
    </children>
