--- a/src/main/java/view/LancamentoHora/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora/LancamentoHora.fxml
@@ -44,7 +44,7 @@
   <children>
     <SplitPane centerShape="false" dividerPositions="0.11587436332767402" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" styleClass="window" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane maxWidth="-Infinity" minHeight="580.0" minWidth="-Infinity" prefHeight="580.0" prefWidth="132.0" styleClass="sidebar" SplitPane.resizableWithParent="false">
+        <AnchorPane maxWidth="-Infinity" minHeight="580.0" minWidth="-Infinity" prefHeight="580.0" prefWidth="100.0" styleClass="sidebar" SplitPane.resizableWithParent="false">
                <children>
                   <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="9.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -79,13 +79,13 @@
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <Label layoutX="293.0" layoutY="29.0" styleClass="title" text="Lançamento de Horas Extras" textFill="#1f25c1">
+                        <Label layoutX="258.0" layoutY="31.0" prefHeight="39.0" prefWidth="354.0" text="Lançamento de Horas Extras" textFill="#483fee">
                            <font>
-                              <Font name="Calibri Bold" size="24.0" />
+                              <Font size="27.0" />
                            </font>
                         </Label>
-                        <Button fx:id="btn_adicionarLinha" layoutX="14.0" layoutY="538.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="62.0" mnemonicParsing="false" onAction="#criarNovaLinha" prefHeight="40.0" prefWidth="62.0" styleClass="btn-no-restriction" text="+" />
-                        <Button fx:id="btn_lancar" layoutX="85.0" layoutY="538.0" mnemonicParsing="false" onAction="#lancarHoras" prefHeight="40.0" prefWidth="155.0" styleClass="btn-no-restriction" text="Lançar" />
+                        <Button fx:id="btn_adicionarLinha" layoutX="14.0" layoutY="538.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="62.0" mnemonicParsing="false" onAction="#criarNovaLinha" prefHeight="40.0" prefWidth="62.0" styleClass="MYButton" text="+" />
+                        <Button fx:id="btn_lancar" layoutX="123.0" layoutY="538.0" mnemonicParsing="false" onAction="#lancarHoras" prefHeight="40.0" prefWidth="155.0" styleClass="MYButton" text="Lançar" />
               </children>
             </AnchorPane>
           </content>
