--- a/src/main/java/view/styles.css
+++ b/src/main/java/view/styles.css
@@ -35,6 +35,21 @@
     -fx-max-height:45px;
 }
 
+.MYButton {
+    -fx-background-color:  #1f25c1;
+    -fx-background-radius:  10px;
+    -fx-text-fill: white;
+    -fx-min-width:100px;
+    -fx-max-width:100px;
+    -fx-min-height:35px;
+    -fx-max-height:35px;
+}
+.MYButton:hover {
+    -fx-background-color: #0062cc;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.4), 10, 0, 0, 2);
+    -fx-text-fill: white;
+}
+
 .myButton:hover {
     -fx-background-color: #0062cc;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.4), 10, 0, 0, 2);
