--- a/src/main/java/view/Cr/CadastroCR.fxml
+++ b/src/main/java/view/Cr/CadastroCR.fxml
@@ -30,12 +30,17 @@
             <Font size="27.0" />
          </font>
       </Label>
-      <TextField fx:id="tfNome" layoutX="287.0" layoutY="325.0" prefHeight="55.0" prefWidth="507.0" promptText="Nome" styleClass="input-text" />
-      <TextField fx:id="tfSigla" layoutX="287.0" layoutY="226.0" prefHeight="55.0" prefWidth="507.0" promptText="Sigla" styleClass="input-text" />
-      <Button layoutX="509.0" layoutY="434.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="33.0" prefWidth="82.0" styleClass="myButton" text="Inserir">
+      <TextField fx:id="tfNome" layoutX="287.0" layoutY="379.0" prefHeight="55.0" prefWidth="507.0" promptText="Nome" styleClass="input-text" />
+      <TextField fx:id="tfSigla" layoutX="287.0" layoutY="250.0" prefHeight="55.0" prefWidth="507.0" promptText="Sigla" styleClass="input-text" />
+      <Button layoutX="586.0" layoutY="526.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="33.0" prefWidth="82.0" styleClass="myButton" text="Inserir">
          <font>
             <Font size="14.0" />
          </font></Button>
       <TextField fx:id="tfCodigo" layoutX="287.0" layoutY="119.0" prefHeight="55.0" prefWidth="507.0" promptText="Codigo" styleClass="input-text" />
+      <Button layoutX="264.0" layoutY="526.0" mnemonicParsing="false" onAction="#voltarVisualizacao" prefHeight="33.0" prefWidth="82.0" styleClass="myButton" text="Voltar">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
