--- a/src/main/java/view/Cliente/CadastroCliente.fxml
+++ b/src/main/java/view/Cliente/CadastroCliente.fxml
@@ -30,11 +30,16 @@
             <Font size="27.0" />
          </font>
       </Label>
-      <TextField fx:id="tfRazaoSocial" layoutX="259.0" layoutY="100.0" prefHeight="55.0" prefWidth="507.0" promptText="Razão Social" styleClass="input-text" />
-      <Button layoutX="486.0" layoutY="499.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" styleClass="myButton" text="Inserir">
+      <TextField fx:id="tfRazaoSocial" layoutX="259.0" layoutY="113.0" prefHeight="55.0" prefWidth="507.0" promptText="Razão Social" styleClass="input-text" />
+      <Button layoutX="558.0" layoutY="520.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" styleClass="myButton" text="Inserir">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <TextField fx:id="tfCNPJ" layoutX="259.0" layoutY="220.0" prefHeight="55.0" prefWidth="507.0" promptText="CNPJ" styleClass="input-text" />
+      <TextField fx:id="tfCNPJ" layoutX="259.0" layoutY="248.0" prefHeight="55.0" prefWidth="507.0" promptText="CNPJ" styleClass="input-text" />
+      <Button layoutX="259.0" layoutY="520.0" mnemonicParsing="false" onAction="#irControleCliente" prefHeight="32.0" prefWidth="86.0" styleClass="myButton" text="Voltar">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
